Fixed possible new z-index problem with chrome 22.

--- a/app/styles/popup.less
+++ b/app/styles/popup.less
@@ -42,6 +42,7 @@ html{
     top: 0;
     left: 0;
     .borderBox;
+    z-index: 3;
 }
 
 #popup {
